--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Mordai</string>
+    <!-- <string name="app_name">Mordai</string> -->
+    <string name="app_name">মড়াই</string>
 </resources>
